--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root" vaul-drawer-wrapper=""></div>
+  <div id="modal"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
