remove react-router in favour of wouter

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="/icon.svg">
   <title>sunoh + TS</title>
 </head>
 
